--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bson = "0.14.0"
 clap = "2.33.0"
 futures = "0.1.27"
-hyper = "0.12.33"
-hyper-router = "0.5.0"
+gotham = "0.4.0"
+gotham_derive = "0.4.0"
 log = "0.4.8"
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "0.1", features = ["full"] }
 pretty_env_logger = "0.4"
 serde = "1.0.104"
 serde_derive = "1.0.104"
 serde_json = "1.0.48"
+mongodb = "0.9.1"
