--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 
 [dependencies]
 clap = "2.33.0"
+chrono = { version = "0.4.11", features = ["serde"] }
+diesel = { version = "1.4.3", features = ["postgres", "serde_json", "chrono", "r2d2"] }
 futures = "0.1.27"
 gotham = "0.4.0"
 gotham_derive = "0.4.0"
