--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,12 +26,12 @@ services:
       - ./:/app
       - cargo_cache:/usr/local/cargo/registry
     labels:
-      - traefik.http.routers.web.rule=Host(`lako.thatiq.localdev`)
-      - traefik.http.routers.web.entrypoints=http
-      - traefik.http.routers.web.middlewares=redirect@file
-      - traefik.http.routers.web-secured.rule=Host(`lako.thatiq.localdev`)
-      - traefik.http.routers.web-secured.entrypoint=https
-      - traefik.http.routers.web-secured.tls=true
+      - traefik.http.routers.lako.rule=Host(`lako.thatiq.localdev`)
+      - traefik.http.routers.lako.entrypoints=http
+      - traefik.http.routers.lako.middlewares=redirect@file
+      - traefik.http.routers.lako-secured.rule=Host(`lako.thatiq.localdev`)
+      - traefik.http.routers.lako-secured.entrypoints=https
+      - traefik.http.routers.lako-secured.tls=true
       - traefik.docker.network=frontend-network
       - traefik.port=8000
 volumes:
