--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,5 @@ pretty_env_logger = "0.4"
 serde = "1.0.104"
 serde_derive = "1.0.104"
 serde_json = "1.0.48"
+validator = "0.10"
+validator_derive = "0.10"
