--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     depends_on:
       - db
     volumes:
-      - ./src:/app/src
+      - ./:/app
       - target_cache:/app/target
       - cargo_cache:/usr/local/cargo/registry
     labels:
