add role to user table

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ gotham = "0.4.0"
 gotham_derive = "0.4.0"
 gotham_middleware_diesel = "0.1.0"
 hyper = "0.12"
+jsonwebtoken = "6.0"
 mime = "0.3"
 lettre = "0.9"
 lettre_email = "0.9"
