--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ futures = "0.1.27"
 gotham = "0.4.0"
 gotham_derive = "0.4.0"
 gotham_middleware_diesel = "0.1.0"
+gotham_middleware_jwt = "0.3.3"
 hyper = "0.12"
 jsonwebtoken = "6.0"
 mime = "0.3"
