--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,24 +7,24 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bcrypt = "0.6.2"
+bcrypt = "0.9.0"
 clap = "2.33.0"
 chrono = { version = "0.4.11", features = ["serde"] }
 diesel = { version = "1.4.3", features = ["postgres", "serde_json", "chrono", "r2d2"] }
 failure = "0.1.1"
-futures = "0.1.27"
-gotham = "0.4.0"
-gotham_derive = "0.4.0"
-gotham_middleware_diesel = "0.1.0"
-gotham_middleware_jwt = "0.3.3"
-hyper = "0.12"
-jsonwebtoken = "6.0"
-mime = "0.3"
-native-tls = "^0.2"
+futures = "0.3.1"
+gotham = "0.5.0"
+gotham_derive = "0.5.0"
+gotham_middleware_diesel = "0.2.0"
+gotham_middleware_jwt = "0.5.0"
+jsonwebtoken = "7.2.0"
+mime = "0.3.15"
+mongodb = "1.1.1"
+native-tls = "0.2.4"
 lettre = "0.9"
 lettre_email = "0.9"
 log = "0.4.8"
-tokio = "0.1"
+tokio = { version = "0.2.6", features = ["full"] }
 pretty_env_logger = "0.4"
 serde = "1.0.104"
 serde_derive = "1.0.104"
