--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,11 @@ gotham_middleware_diesel = "0.2.0"
 gotham_middleware_jwt = "0.5.0"
 jsonwebtoken = "7.2.0"
 mime = "0.3.15"
-mongodb = "1.1.1"
 native-tls = "0.2.4"
 lettre = "0.9"
 lettre_email = "0.9"
 log = "0.4.8"
+thiserror = "^1.0"
 tokio = { version = "0.2.6", features = ["full"] }
 pretty_env_logger = "0.4"
 serde = "1.0.104"
