--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 bcrypt = "0.9.0"
 clap = "2.33.0"
 chrono = { version = "0.4.11", features = ["serde"] }
+rust_decimal = { version = "1.15", features = ["db-postgres", "db-diesel-postgres"] }
+rust_decimal_macros = "1.15"
 diesel = { version = "1.4.3", features = ["postgres", "serde_json", "chrono", "r2d2"] }
 failure = "0.1.8"
 futures = "0.3.1"
