--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,14 @@ clap = "2.33.0"
 chrono = { version = "0.4.11", features = ["serde"] }
 rust_decimal = { version = "1.15", features = ["db-postgres", "db-diesel-postgres"] }
 rust_decimal_macros = "1.15"
-diesel = { version = "1.4.3", features = ["postgres", "serde_json", "chrono", "r2d2"] }
+diesel = { version = "1.4.5", features = ["postgres", "serde_json", "chrono", "r2d2", "uuidv07"] }
 failure = "0.1.8"
 futures = "0.3.1"
 gotham = "0.5.0"
 gotham_derive = "0.5.0"
 gotham_middleware_diesel = "0.2.0"
 gotham_middleware_jwt = "0.5.0"
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
 jsonwebtoken = "7.2.0"
 mime = "0.3.15"
 native-tls = "0.2.4"
